# DGCC

./: CMakeLists.txt  LICENSE.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
docs/html/: annotated.html  classes.html  dir_f3c3b8edb6d04a212620d2632ace9138.html  files.html  globals.html  globals_func.html  graph_legend.html  includes_8h_source.html  index.html  list_8h.html  list_8h__incl.map  list_8h__incl.md5  list_8h_source.html  stack_8h.html  stack_8h__incl.map  stack_8h__incl.md5  stack_8h_source.html  structList.html  structStack.html
docs/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  files.tex  index.tex  list_8h.tex  list_8h__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  stack_8h.tex  stack_8h__incl.md5  structList.tex  structStack.tex
headers/Collection/: includes.h  list.h  queue.h  stack.h
headers/Stack/: stack.h
include/: errors.h  includes.h  types.h
include/Collections/: array.h  binarysearchtree.h  list.h  queue.h  stack.h
include/Iterators/: listiterator.h  queueiterator.h  stackiterator.h
src/Collection/: list.c  queue.c  stack.c
src/Collections/: CMakeLists.txt  array.c  binarysearchtree.c  list.c  queue.c  stack.c
